--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "i-want-my-mtg",
+  "version": "0.0.1-SNAPSHOT",
+  "description": "MTG Collection Tracker",
   "dependencies": {
     "axios": "^1.6.8",
     "node-fetch": "^3.3.2"
@@ -6,5 +9,13 @@
   "devDependencies": {
     "@types/node": "^20.11.28",
     "@types/node-fetch": "^2.6.11"
-  }
+  },
+  "scripts": {
+    "start": "tsc && node dist/index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/matthewdtowles/i-want-my-mtg.git"
+  },
+  "author": "Matthew Towles"
 }
