--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
+    "@angular/cli": "^17.3.3",
     "@types/node": "^20.11.28",
     "@types/node-fetch": "^2.6.11"
   },
