--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-# Ignore built files and directories
-/dist/
-/out/
+# Ignore built files and directories /dist/
+out/
+dist/
 
 # Ignore dependency directories
-/node_modules/
+node_modules/
 
 # Ignore environment configuration files
 .env
