server runs, call to api, render cards

--- a/package.json
+++ b/package.json
@@ -1,11 +1,22 @@
 {
+  "name": "i-want-my-mtg",
+  "version": "1.0.0",
+  "description": "Magic: the Gathering collection manager",
   "scripts": {
-    "start": "tsc && node dist/index.js"
-  },
-  "devDependencies": {
-    "typescript": "^5.4.5"
+    "start": "tsc && npm run build && node dist/index.js",
+    "build": "tsc && npm run copy-templates",
+    "copy-templates": "copyfiles -u 1 src/templates/* .hbs dist"
   },
   "dependencies": {
-    "axios": "^1.6.8"
-  }
+    "axios": "^1.6.8",
+    "express": "^4.19.2",
+    "handlebars": "^4.7.8",
+    "hbs": "^4.2.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "copyfiles": "^2.4.1",
+    "typescript": "^5.4.5"
+  },
+  "author": "Matthew Towles"
 }
