--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "tsc && npm run build && node dist/index.js",
     "build": "tsc && npm run copy-templates",
-    "copy-templates": "copyfiles -u 1 src/templates/* .hbs dist"
+    "copy-templates": "copyfiles -u 1 src/templates/* .hbs dist",
+    "test": "jest"
   },
   "dependencies": {
     "axios": "^1.6.8",
@@ -15,7 +16,11 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
+    "@types/supertest": "^6.0.2",
     "copyfiles": "^2.4.1",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.4.5"
   },
   "author": "Matthew Towles"
