--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.3.8",
+    "dotenv": "^16.4.5",
     "express-handlebars": "^7.1.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
