--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/typeorm": "^10.0.2",
     "axios": "^1.6.8",
     "express-handlebars": "^7.1.2",
+    "handlebars": "^4.7.8",
     "mysql2": "^3.9.7",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
@@ -47,7 +48,7 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "jest": "^29.5.0",
+    "jest": "^29.7.0",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
