--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.3.8",
+    "@nestjs/schedule": "^4.1.0",
     "@nestjs/typeorm": "^10.0.2",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
@@ -34,12 +35,13 @@
     "express-handlebars": "^7.1.2",
     "handlebars": "^4.7.8",
     "mysql2": "^3.9.7",
+    "nestjs-command": "^3.1.4",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
+    "@nestjs/cli": "^10.4.4",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.2",
@@ -80,7 +82,11 @@
     "moduleNameMapper": {
       "^src/(.*)$": "<rootDir>/src/$1"
     },
-    "testPathIgnorePatterns": ["/node_modules/"],
-    "testMatch": ["<rootDir>/test/**/*.spec.ts"]
+    "testPathIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "testMatch": [
+      "<rootDir>/test/**/*.spec.ts"
+    ]
   }
 }
