--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "typeorm-ts-node-commonjs"
+    "typeorm": "typeorm-ts-node-commonjs",
+    "ingest:all-set-meta": "npx ts-node src/cli.ts ingest:all-set-meta",
+    "ingest:cards-in-set": "npx ts-node src/cli.ts ingest:cards-in-set",
+    "ingest:set-by-code": "npx ts-node src/cli.ts ingest:set-by-code"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
