core cli modules configured

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "ingest:cards": "npx ts-node src/cli.ts ingest:cards",
     "ingest:set": "npx ts-node src/cli.ts ingest:set",
     "ingest:all-cards": "npx ts-node src/cli.ts ingest:all-cards",
-    "ingest:test": "npx ts-node src/cli.ts ingest:test"
+    "ingest:test": "npx ts-node src/cli.ts ingest:test",
+    "get-card": "npx ts-node src/cli.ts get-card",
+    "card-test": "npx ts-node src/cli.ts card-test"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
