--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "get-card": "npx ts-node src/cli.ts get-card",
     "cards-in-set": "npx ts-node src/cli.ts cards-in-set",
     "cards-by-name": "npx ts-node src/cli.ts cards-by-name",
-    "card-test": "npx ts-node src/cli.ts card-test"
+    "card-test": "npx ts-node src/cli.ts card-test",
+    "list-sets": "npx ts-node src/cli.ts list-sets",
+    "set-by-code": "npx ts-node src/cli.ts set-by-code"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
