core cli consistent naming

--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "ingest:set": "npx ts-node src/cli.ts ingest:set",
     "ingest:all-cards": "npx ts-node src/cli.ts ingest:all-cards",
     "ingest:test": "npx ts-node src/cli.ts ingest:test",
-    "get-card": "npx ts-node src/cli.ts get-card",
-    "cards-in-set": "npx ts-node src/cli.ts cards-in-set",
-    "cards-by-name": "npx ts-node src/cli.ts cards-by-name",
-    "card-test": "npx ts-node src/cli.ts card-test",
-    "list-sets": "npx ts-node src/cli.ts list-sets",
-    "set-by-code": "npx ts-node src/cli.ts set-by-code",
+    "card:get": "npx ts-node src/cli.ts card:get",
+    "cards:set-get": "npx ts-node src/cli.ts cards:set-get",
+    "cards:name-get": "npx ts-node src/cli.ts cards:name-get",
+    "card:test": "npx ts-node src/cli.ts card:test",
+    "sets:get": "npx ts-node src/cli.ts sets:get",
+    "set:get": "npx ts-node src/cli.ts set:get",
     "user:create": "npx ts-node src/cli.ts user:create",
     "user:get": "npx ts-node src/cli.ts user:get",
     "inventory:save": "npx ts-node src/cli.ts inventory:save",
