--- a/package.json
+++ b/package.json
@@ -34,14 +34,16 @@
     "user:get": "npx ts-node src/cli.ts user:get",
     "inventory:save": "npx ts-node src/cli.ts inventory:save",
     "inventory:remove": "npx ts-node src/cli.ts inventory:remove",
-    "inventory:get":  "npx ts-node src/cli.ts inventory:get",
+    "inventory:get": "npx ts-node src/cli.ts inventory:get",
     "test:inventory:save": "npx ts-node src/cli.ts test:inventory:save"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.8",
     "@nestjs/schedule": "^4.1.0",
     "@nestjs/typeorm": "^10.0.2",
@@ -53,6 +55,8 @@
     "handlebars": "^4.7.8",
     "mysql2": "^3.9.7",
     "nestjs-command": "^3.1.4",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20"
@@ -65,6 +69,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
