fix inventory dtos, inv mappers, all tests

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,6 @@
         "@typescript-eslint"
     ],
     "rules": {
-        // TODO: add custom rules here
+        "indent": ["error", 4]
     }
 }
