aggregator service spec find set working controller spec working controller updated to use agg

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,11 +18,12 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "src/*": ["src/*"],
-      "src/core/*": ["src/core/*"],
-      "src/adapters/*": ["src/adapters/*"]
+      "@src/*": ["src/*"]
     }
   },
-  "include": ["src/**/*", "test/test-utils.ts"],
+  "include": [
+    "src/**/*.ts",
+    "test/**/*.ts"
+  ],
   "exclude": ["node_modules"]
 }
