--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,13 +18,17 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "src/*": ["src/*"],
-      "test/*": ["test/*"]
+      "src/*": [
+        "src/*"
+      ]
     }
   },
   "include": [
     "src/**/*.ts",
     "test/**/*.ts"
   ],
-  "exclude": ["node_modules", "dist"]
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
