--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.2",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
@@ -92,7 +92,7 @@
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.4",
     "tailwindcss": "^3.4.15",
-    "ts-jest": "^29.1.0",
+    "ts-jest": "^29.2.5",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
@@ -109,9 +109,19 @@
       "^.+\\.(t|j)s$": "ts-jest"
     },
     "collectCoverageFrom": [
-      "**/*.(t|j)s"
+      "src/**/*.ts",
+      "!src/**/*.d.ts",
+      "!src/main.ts",
+      "!src/**/index.ts",
+      "!src/**/test-utils.ts",
+      "!src/**/mock.*.ts",
+      "!src/**/*dto*.ts",
+      "!src/**/*entity*.ts",
+      "!src/**/*module*.ts",
+      "!src/**/*port*.ts"
     ],
-    "coverageDirectory": "../coverage",
+    "coverageDirectory": "./coverage",
+    "coverageReporters": ["lcov", "text", "html"],
     "testEnvironment": "node",
     "moduleNameMapper": {
       "^src/(.*)$": "<rootDir>/src/$1"
