--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "start:fresh": "npx tailwindcss -i ./src/adapters/http/styles/tailwind.css -o ./src/adapters/http/public/css/tailwind.css && nest build && npm run start",
     "build": "nest build",
     "build:css": "npx tailwindcss -i ./src/adapters/http/styles/tailwind.css -o ./src/adapters/http/public/css/tailwind.css",
     "build:test-views": "rm -rf test/http/views && cp -r src/adapters/http/views test/http/ && ls -l test/http/views",
