--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "nestjs-command": "^3.1.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "pg": "^8.14.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20"
@@ -122,7 +123,11 @@
       "!src/**/*port*.ts"
     ],
     "coverageDirectory": "./coverage",
-    "coverageReporters": ["lcov", "text", "html"],
+    "coverageReporters": [
+      "lcov",
+      "text",
+      "html"
+    ],
     "testEnvironment": "node",
     "moduleNameMapper": {
       "^src/(.*)$": "<rootDir>/src/$1"
