--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "typeorm-ts-node-commonjs",
+    "typeorm": "NODE_OPTIONS='-r tsconfig-paths/register' typeorm-ts-node-commonjs",
     "ingest:all-sets": "npx ts-node src/cli.ts ingest:all-sets",
     "ingest:cards": "npx ts-node src/cli.ts ingest:cards",
     "ingest:set": "npx ts-node src/cli.ts ingest:set",
     "ingest:all-cards": "npx ts-node src/cli.ts ingest:all-cards",
+    "ingest:today-prices": "npx ts-node src/cli.ts ingest:today-prices",
     "ingest:test": "npx ts-node src/cli.ts ingest:test",
     "card:get": "npx ts-node src/cli.ts card:get",
     "cards:set-get": "npx ts-node src/cli.ts cards:set-get",
@@ -55,20 +56,20 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
-    "axios": "^1.6.8",
+    "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
     "express-handlebars": "^7.1.2",
     "handlebars": "^4.7.8",
-    "mysql2": "^3.9.7",
     "nestjs-command": "^3.1.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "stream-json": "^1.9.1",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
@@ -82,6 +83,8 @@
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
+    "@types/stream-chain": "^2.1.0",
+    "@types/stream-json": "^1.7.8",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
