--- a/scry/Cargo.toml
+++ b/scry/Cargo.toml
@@ -14,6 +14,7 @@ anyhow = "1.0"
 async-stream = "0.3"
 bytes = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
+chrono-tz = "0.8"
 dialoguer = "0.11.0"
 dotenvy = "0.15"
 futures = "0.3.31"
