docker compose working

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,5 @@ SCRY_LOG=
 TIMING_ENABLED=
 JWT_SECRET=
 GITHUB_TOKEN=
+#  "postgresql://{}:{}@{}:{}/{}",
+# username, password, host, port, database
