fixed scry, updated env ex

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,19 @@
-APP_NAME=
-DATABASE_URL=postgresql://mtg_user:super_secure_password@postgres:5432/mtg_production
-DB_HOST=
-DB_PORT=
-DB_USERNAME=
-DB_PASSWORD=
-DB_NAME=
-NODE_ENV=
-APP_LOG=
-SCRY_LOG=
-TIMING_ENABLED=
-JWT_SECRET=
-GITHUB_TOKEN=
-#  "postgresql://{}:{}@{}:{}/{}",
-# username, password, host, port, database
+APP_NAME=i-want-my-mtg
+DB_HOST=redacted
+DB_PORT=redacted
+DB_USERNAME=redacted
+DB_PASSWORD=redacted
+DB_NAME=redacted
+NODE_ENV=dev
+APP_LOG=debug
+SCRY_LOG=debug
+TIMING_ENABLED=false
+JWT_SECRET=redacted
+GITHUB_TOKEN=redacted
+
+# DOCKER - PostgreSQL expects these exact names
+POSTGRES_DB=redacted
+POSTGRES_USER=redacted
+POSTGRES_PASSWORD=redacted
+POSTGRES_HOST_AUTH_METHOD=trust
+DATABASE_URL=postgresql://user:pwd@postgres:0000/postgres_db
