--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,8 @@ services:
     environment:
       - DATABASE_URL=${DATABASE_URL}
       - SCRY_LOG=${SCRY_LOG}
+    env_file:
+      - .env
     volumes:
       - ./scry:/app
       - etl_target:/app/target
@@ -43,6 +45,8 @@ services:
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    env_file:
+      - .env
     ports:
       - "5432:5432"
     volumes:
