--- a/scry/Cargo.toml
+++ b/scry/Cargo.toml
@@ -9,7 +9,7 @@ name = "scry"
 path = "src/main.rs"
 
 [dependencies]
-actson = "0.2.0"
+actson = { version = "2.1.0", features = ["tokio"] }
 anyhow = "1.0"
 async-stream = "0.3"
 bytes = "1.0"
@@ -23,14 +23,10 @@ rust_decimal = { version = "1.0", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "rust_decimal", "macros"] }
-thiserror = "1.0"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 tokio = { version = "1.0", features = ["full"] }
-tokio-cron-scheduler = "0.10"
-tokio-stream = "0.1"
 tokio-util = { version = "0.7.15", features = ["compat", "io"] }
-uuid = { version = "1.0", features = ["v4", "serde"] }
 
 [dependencies.clap]
 version = "4.0"
