--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,40 +1,55 @@
-version: '3.8'
-
 services:
+  # Web App
   web:
     image: ghcr.io/${GITHUB_REPOSITORY}/web:${IMAGE_TAG:-latest}
     restart: unless-stopped
     environment:
       - DATABASE_URL=${DATABASE_URL}
       - NODE_ENV=production
+      - JWT_SECRET=${JWT_SECRET}
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
     networks:
       - app-network
 
+  # ETL App
   etl:
     image: ghcr.io/${GITHUB_REPOSITORY}/etl:${IMAGE_TAG:-latest}
-    restart: "no"  # Run once, don't restart
+    restart: "no"
     environment:
       - DATABASE_URL=${DATABASE_URL}
       - SCRY_LOG=info
+    env_file:
+      - .env.prod
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
+    profiles: ["etl"]
     networks:
       - app-network
 
+  # Shared DB
   postgres:
     image: postgres:15-alpine
     restart: unless-stopped
     environment:
-      - DB_NAME=${DB_NAME}
-      - DB_USERNAME=${DB_USERNAME}
-      - DB_PASSWORD=${DB_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    env_file:
+      - .env.prod
     volumes:
       - postgres_prod_data:/var/lib/postgresql/data
+      - ./docker/postgres/init:/docker-entrypoint-initdb.d/
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     networks:
       - app-network
-    # Don't expose ports in production
+    # No ports exposed to the outside world (internal only)
 
   # Reverse proxy
   nginx:
