--- a/scry/Dockerfile
+++ b/scry/Dockerfile
@@ -5,14 +5,14 @@ RUN apk add --no-cache musl-dev pkgconfig openssl-dev openssl-libs-static
 
 # Development stage
 FROM base as development
-COPY Cargo.toml Cargo.lock ./
-RUN mkdir src && echo "fn main() {}" > src/main.rs && cargo build
+COPY Cargo.toml ./
 COPY src ./src
+RUN cargo build
 CMD ["cargo", "run"]
 
 # Build stage  
 FROM base as build
-COPY Cargo.toml Cargo.lock ./
+COPY Cargo.toml ./
 COPY src ./src
 RUN cargo build --release
 
