--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # NestJS Web Application
   web:
@@ -11,6 +9,7 @@ services:
     environment:
       - DATABASE_URL=${DATABASE_URL}
       - NODE_ENV=${NODE_ENV}
+      - JWT_SECRET=${JWT_SECRET}
     volumes:
       - .:/app
       - /app/node_modules
@@ -24,15 +23,13 @@ services:
   etl:
     build:
       context: ./scry
+      dockerfile: Dockerfile
       target: development
     environment:
       - DATABASE_URL=${DATABASE_URL}
       - SCRY_LOG=${SCRY_LOG}
     env_file:
       - .env
-    volumes:
-      - ./scry:/app
-      - etl_target:/app/target
     depends_on:
       postgres:
         condition: service_healthy
