--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,44 +1,44 @@
 services:
-  # Web App
+  # Web Application
   web:
-    image: ghcr.io/${GITHUB_REPOSITORY}/web:${IMAGE_TAG:-latest}
-    restart: unless-stopped
+    image: ghcr.io/matthewdtowles/i-want-my-mtg/web:latest
+    ports:
+      - "80:3000"
     environment:
       - DATABASE_URL=${DATABASE_URL}
-      - NODE_ENV=production
+      - NODE_ENV=${NODE_ENV}
       - JWT_SECRET=${JWT_SECRET}
+    env_file:
+      - .env.prod
     depends_on:
       postgres:
         condition: service_healthy
-    networks:
-      - app-network
+    restart: unless-stopped
 
-  # ETL App
+  # Scry - ETL Application
   etl:
-    image: ghcr.io/${GITHUB_REPOSITORY}/etl:${IMAGE_TAG:-latest}
-    restart: "no"
+    image: ghcr.io/matthewdtowles/i-want-my-mtg/etl:latest
     environment:
       - DATABASE_URL=${DATABASE_URL}
-      - SCRY_LOG=info
+      - SCRY_LOG=${SCRY_LOG}
     env_file:
       - .env.prod
     depends_on:
       postgres:
         condition: service_healthy
     profiles: ["etl"]
-    networks:
-      - app-network
+    restart: "no"
 
-  # Shared DB
+  # PostgreSQL Database (shared by web and etl)
   postgres:
     image: postgres:15-alpine
-    restart: unless-stopped
     environment:
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     env_file:
       - .env.prod
+    # No ports exposed to the outside world (internal only)
     volumes:
       - postgres_prod_data:/var/lib/postgresql/data
       - ./docker/postgres/init:/docker-entrypoint-initdb.d/
@@ -47,28 +47,9 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
-    networks:
-      - app-network
-    # No ports exposed to the outside world (internal only)
-
-  # Reverse proxy
-  nginx:
-    image: nginx:alpine
     restart: unless-stopped
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/ssl:/etc/nginx/ssl:ro
-    depends_on:
-      - web
-    networks:
-      - app-network
 
 volumes:
   postgres_prod_data:
 
-networks:
-  app-network:
-    driver: bridge
+# No networks - handled by Docker Compose by default
