--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,11 +19,12 @@ jobs:
 
       - name: Run App Unit Tests
         run: |
+          cp .env.example .env
           docker compose run --rm web npm test
 
-      - name: Run Scry Unit Tests
-        run: |
-          docker compose run --rm etl cargo test
+      # - name: Run Scry Unit Tests
+      #   run: |
+      #     docker compose run --rm etl cargo test
 
       - name: Cleanup
         run: docker compose down -v
