pagination working pagination css docker views fix pagination buttons termination fix

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - .:/app
       - /app/node_modules
       - /app/scry
+      - ./src/http/views:/app/dist/http/views
+      - ./src/http/public:/app/dist/http/public
     depends_on:
       postgres:
         condition: service_healthy
