all logic out of hbs and inject built urls use pageination response dto use safe query options

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
   "include": [
     "src/**/*.ts",
     "test/**/*.ts"
-  ],
+, "src/http/set/dto/set-list.view.dto.ts.bk"  ],
   "exclude": [
     "node_modules",
     "dist"
