--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ SCRY_LOG=debug
 TIMING_ENABLED=false
 JWT_SECRET=redacted
 GITHUB_TOKEN=redacted
+DEBUG_MODE=0
 
 # DOCKER - PostgreSQL expects these exact names
 POSTGRES_DB=redacted
