app logger, event id working; added to service

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,8 @@ SCRY_LOG=debug
 TIMING_ENABLED=false
 JWT_SECRET=redacted
 GITHUB_TOKEN=redacted
-DEBUG_MODE=0
+DEBUG_MODE=1
+LOG_FORMAT=json
 
 # DOCKER - PostgreSQL expects these exact names
 POSTGRES_DB=redacted
