--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -58,6 +58,19 @@ services:
       retries: 5
     restart: unless-stopped
 
+  migrate:
+    image: postgres:15-alpine
+    env_file:
+      - .env
+    depends_on:
+      postgres:
+        condition: service_healthy
+    volumes:
+      - ./docker/postgres/migrations:/migrations:ro
+    entrypoint: [ "/migrations/run_migrations.sh" ]
+    profiles: [ "migrate" ]
+    restart: "no"
+
 volumes:
   postgres_prod_data:
 
